--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,40 +1,21 @@
-# --- SEGURIDAD (CRÍTICO) ---
-# Nunca subas tus llaves secretas o credenciales de DB
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# --- REACT / NODE ---
-node_modules/
-dist/
-dist-ssr/
-build/
-*.local
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# --- PYTHON (Backend FastAPI) ---
-# Esto evita que subas los archivos compilados de Python
-__pycache__/
-*.py[cod]
-*$py.class
-.venv/
-venv/
-ENV/
-env/
-.pytest_cache/
+node_modules
+dist
+dist-ssr
+*.local
 
-# --- LOGS ---
-logs
-*.log
-
-# --- EDITOR & OS ---
+# Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-.idea/
+.idea
 .DS_Store
 *.suo
 *.ntvs*
